Añadidas las credenciales de la base de datos de docker

--- a/app/.env
+++ b/app/.env
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=mysql
+DB_HOST=laravel-db
 DB_PORT=3306
 DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=x0g5-OLs3-vcDj-8fl2-5hIJ
+DB_USERNAME=laravel
+DB_PASSWORD=x9hf92AOG20aA
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
