--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,8 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: laravel-app
-    user: "1000:1000"
     volumes:
-      - ./app:/app
+      - ./app:/app:rw
     ports:
       - "8000:8000"
     depends_on:
